--- a/img-recog-backend/img-recog-client/src/components/Profile/Profile.css
+++ b/img-recog-backend/img-recog-client/src/components/Profile/Profile.css
@@ -10,6 +10,21 @@
   align-items: center;
 }
 
+@media screen and (max-width: 600px) {
+  .profile-modal {
+    background-color: rgba(255, 255, 255, 0.8);
+    position: fixed;
+    height: 60%;
+    width: 80%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .exit-profile {
   border: none;
   background: none;
